# esmini-bridge-autoware

./: .gitignore  autoware-ws.Dockerfile  autoware.Dockerfile  docker-compose.yml  eba-autoware.Dockerfile  esmini-ws.Dockerfile  esmini.Dockerfile  justfile
.github/workflows/: build.yaml
autoware_ws/: .gitignore  justfile
esmini-ws/: justfile  log.txt
esmini_ws/: udp_controller.py
resources/: .gitignore
resources/osm/: cr_file.osm  crest-curve.osm  curve_r100.osm  curves.osm  curves_elevation.osm  e6mini_same.osm  fabriksgatan.osm  jolengatan.osm  multi_intersections.osm  soderleden.osm  straight_500m.osm  straight_500m_signs.osm  striaghtAndCurves.osm  tianjin.osm  two_plus_one.osm
resources/xodr/: cr_file.xodr  net.net.xml
resources/xosc/: .gitignore
resources/xosc/chengyu/: 1.xosc  2.xosc
ros_ws/: .gitignore  deps.repo  justfile
ros_ws/esmini-bridge-autoware/: CMakeLists.txt  package.xml
ros_ws/esmini-bridge-autoware/include/esmini-bridge-autoware/: ego_init.hpp
ros_ws/esmini-bridge-autoware/launch/: main.xml
ros_ws/esmini-bridge-autoware/src/: ego_init.cpp  esmini-bridge-autoware.cpp
ros_ws/src/: setup.py
ros_ws/src/cpp_esmini_bridge_autoware/: CMakeLists.txt  package.xml
ros_ws/src/cpp_esmini_bridge_autoware/include/cpp_esmini_bridge_autoware/: AutowareHandler.hpp  EgoState.hpp  World.hpp  world.hpp
ros_ws/src/cpp_esmini_bridge_autoware/launch/: dummy_perception.xml  main.yaml
ros_ws/src/cpp_esmini_bridge_autoware/src/: AutowareHandler.cpp  World.cpp  esmini-bridge-autoware.cpp  world.cpp
ros_ws/src/esmini-bridge-autoware/: package.xml  setup.py
ros_ws/src/esmini-bridge-autoware/src/: World.py  esmini_bridge_autoware.py
ros_ws/src/esmini-bridge-autoware/src/Autoware/: EgoController.py  EgoInit.py  __init__.py
ros_ws/src/esmini-bridge-autoware/src/SE/: SimpleVehicleState.py
ros_ws/src/esmini_bridge_autoware/: esmini_bridge_autoware.py  package.xml  setup.cfg  setup.py
ros_ws/src/esmini_bridge_autoware/esmini_bridge_autoware/: World.py  esmini_bridge_autoware.py
ros_ws/src/esmini_bridge_autoware/esmini_bridge_autoware/Autoware/: EgoInit.py  EgoInitPublisher.py  __init__.py
ros_ws/src/esmini_bridge_autoware/esmini_bridge_autoware/SE/: ObjectState.py  __init__.py
