<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_esmini_bridge_autoware</name>
  <version>0.0.0</version>
  <description>Bridge Autoware to use Esmini as Simulator in CPP</description>
  <maintainer email="lolainta@gmail.com">LolaInTa Chi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
